# yamalyze

./: .gitignore  .prettierignore  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: github-pages.yml
pages/: index.js  style.css
src/: diff.rs  lib.rs
src/snapshots/: yamalyze__tests__e2e_array_array.snap  yamalyze__tests__e2e_map_array.snap  yamalyze__tests__e2e_map_map.snap  yamalyze__tests__e2e_scalar_array.snap  yamalyze__tests__e2e_scalar_int_keyed_array.snap  yamalyze__tests__e2e_scalar_map.snap  yamalyze__tests__e2e_scalar_scalar.snap  yamalyze__tests__read_yaml_valid.snap  yamalyze__tests__wrap_in_root_mapping.snap  yamalyze__tests__wrap_in_root_scalar.snap  yamalyze__tests__wrap_in_root_sequence.snap
static/: index.html
