[package]
authors = ["skatiyar"]
publish = false
name = "yamalyze"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_yml = "0.0.12"
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.4"

[lints.clippy]
needless_return = "warn"
needless_borrow = "warn"
single_component_path_imports = "warn"
to_string_in_format_args = "warn"

[lints.rust]
unused_mut = "warn"
